--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Java .gitignore template
+# This file is used to ignore files and directories that should not be tracked by Git in a Java project.
+
+# VS Code settings
+.vscode/
+
 # Compiled class file
 *.class
 
@@ -22,3 +28,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
