--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,9 @@ repositories {
 
 dependencies {
 
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
+
     testImplementation(
-        'junit:junit:4.13.2',
         'org.junit.jupiter:junit-jupiter:5.10.2',
         'org.assertj:assertj-core:3.25.3',
     )     
