Enhance test suite with nested classes and concurrent tests for improved structure and reliability

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,3 +28,10 @@ dependencies {
 application {
     mainClass = 'ru.vez.kvstore.MainApp'
 }
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+    }
+}
